--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,11 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: the-artfact-data
+          path: artifact-data
   deploy:
     needs: build
     runs-on: ubuntu-latest
