added download artifact step

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,13 +29,17 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: the-artfact-data
-          path: |
-            dist
-            package.json
+          path: dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: the-artifact-data
+      - name: Output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
